<resources>
    <string name="app_name">RTB</string>
    <string name="rms">RMS</string>

    <string name="search_project">Search for Project</string>
    <string name="search_all">All</string>
    <string name="search_actives">Actives</string>
    <string name="search_inactives">Inactivates</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_id">Project ID</string>
    <string name="project_home">Project Home</string>
    <string name="project_name">Project Name</string>
    <string name="description">Description</string>
    <string name="project_alias">Project Alias</string>
    <string name="project_is_active">Project is Active</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="created_at">Created At</string>
    <string name="updated_at">Updated At</string>
    <string name="new_project">New Project</string>
    <string name="update_project">Update Project</string>
    <string name="requirement_home">Requirement Home</string>
    <string name="search_requirement">Search for Requirement</string>
    <string name="new_requirement">New Requirement</string>
    <string name="update_requirement">Update Requirement</string>
    <string name="requirement_code">Requirement Code</string>
    <string name="requirement_code_value">%1$s-%2$d</string>
    <string name="requirement_title">Title</string>
    <string name="requirement_notes">Notes</string>
    <string name="requirement_user_story">User Story</string>
    <string name="requirement_type">Type</string>
    <string name="requirement_origin">Origin</string>
    <string name="requirement_priority">Priority</string>
    <string name="requirement_project">Project</string>
    <string name="requirement_created_at">Created at</string>
    <string name="requirement_updated_at">Updated at</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Logout description</string>
    <string name="back">Back</string>
    <string name="back_description">Back description</string>
    <string name="sign_in">Sign in</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="slogan">You can do more!</string>
    <string name="no_account">No account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_update_project">UpdateProject</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="new_project_toast">Project created successfully!</string>
    <string name="error_creating_project_toast">Error creating project!</string>
    <string name="update_project_toast">Project updated successfully!</string>
    <string name="error_getting_project_toast">Error getting project!</string>
    <string name="error_getting_projects_toast">Error getting projects!</string>
    <string name="error_updating_project_toast">Error updating project!</string>
    <string name="delete_project_toast">Project deleted successfully!</string>
    <string name="error_deleting_project_toast">Error deleting project!</string>
    <string name="projects_not_found_title">No Projects Found</string>

    <string name="not_found_subtitle">We guess this is your first time! Create a now to get started!</string>

    <string name="collaborators_not_found_title">No New Collaborators Found</string>
    <string name="no_collaborators_already_in_project_title">No Collaborators Are Already On The Project</string>
    <string name="collaborator_home">Collaborators</string>
    <string name="new_collaborator">New collaborator</string>
    <string name="already_in_project">Already in project</string>
    <string name="search_collaborator">Search for Collaborator</string>
    <string name="add_collaborator_toast">Collaborator added successfully!</string>
    <string name="error_adding_collaborator_toast">Error adding collaborator!</string>
    <string name="delete_collaborator_toast">Collaborator deleted successfully!</string>
    <string name="error_deleting_collaborator_toast">Error deleting collaborator!</string>
    <string name="error_getting_new_collaborators_toast">Error getting new collaborators!</string>
    <string name="error_getting_collaborators_toast">Error getting collaborators!</string>

    <string name="required_field">The field must be filled!</string>

    <string name="new_user">User created successfully!</string>
    <string name="new_user_error">Unable to register user, please try again!</string>

    <string name="error_getting_requirement_toast">Error getting requirement!</string>
    <string name="error_getting_requirements_toast">Error getting requirements!</string>

    <string name="requirement_registered_successfully">Requirement successfully registered!</string>
    <string name="requirement_not_registered">The requirement could not be registered, please try again!</string>

    <string name="requirement_updated_successfully">Requirement successfully updated!</string>
    <string name="requirement_not_updated">The requirement could not be updated, please try again!</string>

    <string name="delete_requirement_toast">Requirement deleted successfully!</string>
    <string name="error_deleting_requirement_toast">Error deleting requirement!</string>

    <string name="requirements_not_found_title">No Requirements Found</string>
    <string name="requirement_select_type">Select type…</string>
    <string name="requirement_select_type_functional">Functional Requirement</string>
    <string name="requirement_select_type_non_functional">Non-Functional Requirement</string>
    <string name="requirement_select_type_inverse">Inverse Requirement</string>
    <string name="requirement_select_type_business_rule">Business Rule</string>

    <string name="requirement_select_origin">Select origin…</string>
    <string name="requirement_select_origin_product">Product</string>
    <string name="requirement_select_origin_organization">Organizational</string>
    <string name="requirement_select_origin_external">External</string>

    <string name="requirement_select_priority">Select priority…</string>
    <string name="requirement_select_priority_urgent">Urgent</string>
    <string name="requirement_select_priority_high">High</string>
    <string name="requirement_select_priority_normal">Normal</string>
    <string name="requirement_select_priority_low">Low</string>

    <string name="requirement_id_validation">Requirement ID not found!</string>
    <string name="requirement_project_id_validation">Requirement must be linked to a project!</string>
    <string name="requirement_type_field_validation">Requirement Type needs to be selected!</string>
    <string name="requirement_origin_field_validation">Requirement Origin needs to be selected!</string>
    <string name="requirement_priority_field_validation">Requirement Priority needs to be selected!</string>
    <string name="requirement_title_field_validation">Title field cannot be empty!</string>
    <string name="requirement_user_story_field_validation">User Story field cannot be empty!</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="menu_option">...</string>
</resources>