<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.SignIn">

    <LinearLayout android:gravity="end"
        android:id="@+id/logoRTB"
        android:layout_height="200dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_amber"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/logoRTBLabel"
            style="@style/txtInterbold64"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="0.8"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/app_name"
            tools:text="@string/app_name" />

        <TextView android:id="@+id/sloganRTBLabel"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:text="@string/slogan"
            android:gravity="right"
            style="@style/txtInterbold24"
            tools:text="@string/slogan"/>
    </LinearLayout>

    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoRTB"
        style="@style/txtIntersemibold30"
        tools:text="@string/sign_up"
        tools:ignore="MissingConstraints" />

    <fragment
        android:name="com.rtb.rtb.view.components.InputFragment"
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTitle" />

    <fragment
        android:name="com.rtb.rtb.view.components.InputFragment"
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailAddress"/>

    <fragment
        android:name="com.rtb.rtb.view.components.InputFragment"
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/firstName"
        app:layout_constraintTop_toBottomOf="@id/emailAddress" />

    <fragment
        android:name="com.rtb.rtb.view.components.InputFragment"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstName" />

    <fragment
        android:name="com.rtb.rtb.view.components.InputFragment"
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <fragment
        android:name="com.rtb.rtb.view.components.ButtonFragment"
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout android:gravity="start"
        android:id="@+id/alreadyHaveAnAccountRow"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/signInBtn"
        tools:ignore="MissingConstraints">
        <TextView android:id="@+id/alreadyHaveAnAccountLabel"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:layout_width="0dp"
            android:singleLine="true"
            android:text="@string/already_have_an_account"
            android:textColor="@color/gray_600"
            android:textSize="16sp"
            android:fontFamily="@font/intermedium"
            tools:targetApi="p"/>
        <TextView android:id="@+id/signInLabel"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:paddingStart="8dp"
            android:singleLine="true"
            android:text="@string/sign_in"
            android:textColor="@color/amber_500"
            android:textSize="16sp"
            android:fontFamily="@font/intermedium"
            tools:targetApi="p"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>